--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus/Properties/Strings.resx
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus/Properties/Strings.resx
@@ -212,7 +212,7 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
     <comment>Message when user asks random question to the bot.</comment>
   </data>
   <data name="QuestionAskedFactTitle" xml:space="preserve">
-    <value>Question asked:</value>
+    <value>Pregunta formulada:</value>
     <comment>The fact set title for the question asked in the SME Ticket card.</comment>
   </data>
   <data name="QuestionForExpertSubHeaderText" xml:space="preserve">
@@ -228,15 +228,15 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
     <comment>Text on change status button.</comment>
   </data>
   <data name="ResponseHeaderText" xml:space="preserve">
-    <value>Here is what I found:</value>
+    <value>Esto es lo que encontre:</value>
     <comment>Response header-letting the user know that a response is generated to their request from QnA Maker.</comment>
   </data>
   <data name="ClosedFactTitle" xml:space="preserve">
-    <value>Closed: </value>
+    <value>Cerrado: </value>
     <comment>Closed fact title is one of the available fact set.</comment>
   </data>
   <data name="DateCreatedDisplayFactTitle" xml:space="preserve">
-    <value>Created: </value>
+    <value>Creado: </value>
     <comment>Created: one of the available fact set in notification cards- created is the title for created date value.</comment>
   </data>
   <data name="ShowCardTitleText" xml:space="preserve">
@@ -260,11 +260,11 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
     <comment>Title text of share feedback user carousel card.</comment>
   </data>
   <data name="AskAnExpertDisplayText" xml:space="preserve">
-    <value>Ask an expert</value>
+    <value>Preguntar a Experto</value>
     <comment>Ask an expert display text: text sent to the bot when ask an expert button is clicked.</comment>
   </data>
   <data name="ShareFeedbackDisplayText" xml:space="preserve">
-    <value>Share feedback</value>
+    <value>Compartir comentarios</value>
     <comment>Share feedback display text: text sent to the bot when share feedback button is clicked.</comment>
   </data>
   <data name="SMEAssignedStatus" xml:space="preserve">
@@ -292,7 +292,7 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
     <comment>Notification text sent to the user who opened a ticket, when the ticket is reopened.</comment>
   </data>
   <data name="GoToOriginalThreadButtonText" xml:space="preserve">
-    <value>Go to original thread</value>
+    <value>Ir al hilo original</value>
     <comment>Go to original thread button available on messaging extension card.</comment>
   </data>
   <data name="NonSMEErrorText" xml:space="preserve">
@@ -300,15 +300,15 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
     <comment>Error message when a user of non-SME team tries to access messaging extension application</comment>
   </data>
   <data name="AssignedUserNotificationStatus" xml:space="preserve">
-    <value>Assigned</value>
+    <value>Asignado</value>
     <comment>The status value for the user notification when a ticket is assigned to an expert</comment>
   </data>
   <data name="ClosedUserNotificationStatus" xml:space="preserve">
-    <value>Closed</value>
+    <value>Cerrado</value>
     <comment>The status value for the user notification when a ticket is closed by an expert.</comment>
   </data>
   <data name="UnassignedUserNotificationStatus" xml:space="preserve">
-    <value>Unassigned</value>
+    <value>Sin Asignar</value>
     <comment>The status value for the user notification when a ticket is unassigned</comment>
   </data>
   <data name="SMEUserChatMessage" xml:space="preserve">
@@ -316,15 +316,15 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
     <comment>The {0} is the placeholder for the title that the user had provided when asking an expert.</comment>
   </data>
   <data name="AssignToMeActionChoiceTitle" xml:space="preserve">
-    <value>Assign to me</value>
+    <value>Asignado a mi</value>
     <comment>The dropdown choice for "Assign to me" for the SME ticket status is being updated</comment>
   </data>
   <data name="CloseActionChoiceTitle" xml:space="preserve">
-    <value>Close</value>
+    <value>Cerrar</value>
     <comment>The dropdown choice for "Close" for when the SME ticket status is being updated</comment>
   </data>
   <data name="ReopenActionChoiceTitle" xml:space="preserve">
-    <value>Reopen</value>
+    <value>Re-Abrir</value>
     <comment>The dropdown choice for "Reopen" for when the SME ticket status is being updated from the closed status.</comment>
   </data>
   <data name="ReopenAssignToMeActionChoiceTitle" xml:space="preserve">
@@ -380,11 +380,11 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
     <comment>Take a tour button available for the users on welcome card, through which user can take a tour on bot functionalities in personal scope. </comment>
   </data>
   <data name="TitleFact" xml:space="preserve">
-    <value>Title:</value>
+    <value>Titulo:</value>
     <comment>Title fact is used to show the title entered by the user for his inquiry.</comment>
   </data>
   <data name="TitleRequiredText" xml:space="preserve">
-    <value>Title (Required)</value>
+    <value>Titulo (Requerido)</value>
     <comment>Title(Required): label of the title text box.</comment>
   </data>
   <data name="NotHelpfulRatingText" xml:space="preserve">
@@ -396,7 +396,7 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
     <comment>The necessary string for the view article button</comment>
   </data>
   <data name="SMEFeedbackHeaderText" xml:space="preserve">
-    <value>Feedback</value>
+    <value>Retroalimentacion</value>
     <comment>Title text for SME facing feedback card.</comment>
   </data>
   <data name="EmptyQuestionErrorText" xml:space="preserve">
@@ -412,11 +412,11 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
     <comment>Delete confirmation message.</comment>
   </data>
   <data name="DeleteButtonText" xml:space="preserve">
-    <value>Delete</value>
+    <value>Eliminar</value>
     <comment>Delete button text.</comment>
   </data>
   <data name="LastEditedText" xml:space="preserve">
-    <value>Last edited by</value>
+    <value>Última edición por</value>
     <comment>Show message on adaptive card after editing the QnA pair.</comment>
   </data>
   <data name="No" xml:space="preserve">
@@ -428,47 +428,47 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
     <comment>Label text for question on the card.</comment>
   </data>
   <data name="EditButtonText" xml:space="preserve">
-    <value>Edit</value>
+    <value>Editar</value>
     <comment>Edit button text.</comment>
   </data>
   <data name="WaitMessageAnswer" xml:space="preserve">
-    <value>Note: Updates are made every few minutes</value>
+    <value>Nota: Las actualizaciones se realizan cada pocos minutos.</value>
     <comment>Wait message to show on adaptive card after performing any action on QnA pair.</comment>
   </data>
   <data name="Yes" xml:space="preserve">
-    <value>Yes</value>
+    <value>Si</value>
     <comment>Yes button text on delete QnA pair confirmation card.</comment>
   </data>
   <data name="DeletedQnaPair" xml:space="preserve">
-    <value>Deleted by {0}</value>
+    <value>Eliminado por {0}</value>
     <comment>Text shown on the card when a QnA pair is deleted.</comment>
   </data>
   <data name="UpdateHistoryButtonText" xml:space="preserve">
-    <value>Update history</value>
+    <value>Historial de actualizaciones</value>
     <comment>Update history button text.</comment>
   </data>
   <data name="WaitMessage" xml:space="preserve">
-    <value>Please wait for some time, updates to this question: "{0}" will be available in short time.</value>
+    <value>Espere un momento, las actualizaciones a esta pregunta: "{0}" estará disponible en poco tiempo.</value>
     <comment>Wait message to show below the adaptive card while trying to delete the question and is not available in production knowledgebase and waiting to be publish.</comment>
   </data>
   <data name="AddQuestionSubtitle" xml:space="preserve">
-    <value>Add new question details</value>
+    <value>Agregar nuevos detalles de preguntas</value>
     <comment>The subtitle at the top of task module while adding the new QnA pair.</comment>
   </data>
   <data name="EditQuestionSubtitle" xml:space="preserve">
-    <value>Edit question details</value>
+    <value>Editar detalles de la pregunta</value>
     <comment>The subtitle at the top of task module while editing the QnA pair.</comment>
   </data>
   <data name="HTMLErrorText" xml:space="preserve">
-    <value>HTML tags are not supported.</value>
+    <value>Las etiquetas HTML no son compatibles.</value>
     <comment>Error message to show if HTML tags are entered on any field while adding or editing the QnA pair.</comment>
   </data>
   <data name="QuestionAlreadyExistsErrorText" xml:space="preserve">
-    <value>Question already exist. please add different question.</value>
+    <value>La pregunta ya existe. por favor agregue una pregunta diferente.</value>
     <comment>Error message to show if question is already existing in the knowledgebase while adding or editing the QnA pair.</comment>
   </data>
   <data name="OpenArticle" xml:space="preserve">
-    <value>Open article</value>
+    <value>Abrir Articulo</value>
     <comment>Open article button text, which will show on adaptiver rich card if redirection url field is filled while adding/editing the QnA pair.</comment>
   </data>
   <data name="BackButtonCommandText" xml:space="preserve">
@@ -484,11 +484,11 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
     <comment>Error message to show if image url text box is empty while adding or editing the QnA pair.</comment>
   </data>
   <data name="EntryCreatedByText" xml:space="preserve">
-    <value>Created by</value>
+    <value>Creado por</value>
     <comment>Show message on adaptive card, after adding the QnA pair.</comment>
   </data>
   <data name="DescriptionPlaceholderText" xml:space="preserve">
-    <value>Enter information (500 characters max)</value>
+    <value>Ingrese información (500 caracteres como máximo)</value>
     <comment>Placeholder text for description text box.</comment>
   </data>
   <data name="ImageUrlPlaceholderText" xml:space="preserve">
@@ -586,7 +586,7 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
     <comment>Question answer pair added manually in QnA Maker</comment>
   </data>
   <data name="UpdateHistoryDateHeaderText" xml:space="preserve">
-    <value>Date</value>
+    <value>Fecha</value>
     <comment>Date header text in update history adaptive card text.</comment>
   </data>
 </root>
