--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus/Properties/Strings.resx
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus/Properties/Strings.resx
@@ -126,11 +126,11 @@
     <comment>Title of the ask an expert card.</comment>
   </data>
   <data name="AskAnExpertText2" xml:space="preserve">
-    <value>...If my answer isn't satisfactory... I'll connect you to an expert.</value>
+    <value>If my answer wasn't satisfactory, I'll get you in touch with an expert on the subject.</value>
     <comment>Helps the user in understanding there is an expert team to connect to.</comment>
   </data>
   <data name="FeedbackText1" xml:space="preserve">
-    <value>Don't hesitate to post your feedback for any aspect, maybe your feedback will be applied in next update</value>
+    <value>Let me team of experts know how I'm doing so they can make me even better!</value>
     <comment>Text suggests that user is invited to share his feedback on his experience using bot.</comment>
   </data>
   <data name="FunctionCardText1" xml:space="preserve">
@@ -138,7 +138,7 @@
     <comment>Explains what bot does and possible questions.</comment>
   </data>
   <data name="FunctionCardText2" xml:space="preserve">
-    <value>You can ask me a question by typing it in the chat box below  I'll try my best to answer it...</value>
+    <value>You can ask me a question by typing it in the chat box below and I'll do my best to answer your question</value>
     <comment>Suggests the user to ask question.</comment>
   </data>
   <data name="ShareFeedbackButtonText" xml:space="preserve">
@@ -170,7 +170,7 @@
     <comment>Ability to chat directly with end user from SME channel.</comment>
   </data>
   <data name="NotificationCardContent" xml:space="preserve">
-    <value>I've shared your question with the related experts. They'll respond to you directly with a chat message.</value>
+    <value>Thank you for your question! We've dispatched your message directly to an expert, who will respond to you directly.</value>
     <comment>Confirmation message to the user upon asking question to the expert.</comment>
   </data>
   <data name="TeamChatHeaderText" xml:space="preserve">
@@ -178,7 +178,7 @@
     <comment>Team carousel chat card header-title of the chat card.</comment>
   </data>
   <data name="TeamChatContent" xml:space="preserve">
-    <value>Click chat with user button to initiate a direct chat.</value>
+    <value>Click on the "Chat With User" button to message them directly.</value>
     <comment>Team carousel chat card content- SME team members can chat directly with the end users.</comment>
   </data>
   <data name="TeamNotificationHeaderText" xml:space="preserve">
@@ -208,7 +208,7 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
     <comment>Welcome message when bot is added to a new team.</comment>
   </data>
   <data name="CustomMessage" xml:space="preserve">
-    <value>I didn't find a matching answer for this question. Do you want me to ask an expert?</value>
+    <value>I didn't find a relevant answer for your question. Would you like me to ask an expert?</value>
     <comment>Message when user asks random question to the bot.</comment>
   </data>
   <data name="QuestionAskedFactTitle" xml:space="preserve">
@@ -220,7 +220,7 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
     <comment>Text says that user is asking a question to the expert, {0} placeholder holds the name of the person.</comment>
   </data>
   <data name="TeamCustomMessage" xml:space="preserve">
-    <value>Hello, I don't support bot commands in the Team. Here is a quick tour of how I can help.</value>
+    <value>Sorry, but I don't support bot commands on Teams. Here's a quick tour of how I can help you.</value>
     <comment>When SME team member asks bot a questions- a message appears saying that team member is supposed to install the bot in personal scope.</comment>
   </data>
   <data name="ChangeStatusButtonText" xml:space="preserve">
@@ -232,7 +232,7 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
     <comment>Response header-letting the user know that a response is generated to their request from QnA Maker.</comment>
   </data>
   <data name="ClosedFactTitle" xml:space="preserve">
-    <value>Closed: </value>
+    <value>Resolved: </value>
     <comment>Closed fact title is one of the available fact set.</comment>
   </data>
   <data name="DateCreatedDisplayFactTitle" xml:space="preserve">
@@ -248,7 +248,7 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
     <comment>Text that suggest users to fill mandatory fields.</comment>
   </data>
   <data name="ResultsFeedbackText" xml:space="preserve">
-    <value>Feedback for this answer</value>
+    <value>Feedback for the answer of "{}"</value>
     <comment>This text is used as title for results feedback card.</comment>
   </data>
   <data name="FeedbackAlertText" xml:space="preserve">
@@ -284,7 +284,7 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
     <comment>Notification text sent to the user who opened a ticket, when the ticket is assigned to an expert.</comment>
   </data>
   <data name="ClosedTicketUserNotification" xml:space="preserve">
-    <value>This request has been closed. Ask an expert again if you still need more assistance.</value>
+    <value>This request has been resolved. Ask an expert again if you still need more assistance.</value>
     <comment>Notification text sent to the user who opened a ticket, when the ticket is closed.</comment>
   </data>
   <data name="ReopenedTicketUserNotification" xml:space="preserve">
@@ -296,7 +296,7 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
     <comment>Go to original thread button available on messaging extension card.</comment>
   </data>
   <data name="NonSMEErrorText" xml:space="preserve">
-    <value>The messaging extension can only be invoked from the channel in which the  app is installed</value>
+    <value>The messaging extension can only be run from the channel that the app is installed.</value>
     <comment>Error message when a user of non-SME team tries to access messaging extension application</comment>
   </data>
   <data name="AssignedUserNotificationStatus" xml:space="preserve">
@@ -304,7 +304,7 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
     <comment>The status value for the user notification when a ticket is assigned to an expert</comment>
   </data>
   <data name="ClosedUserNotificationStatus" xml:space="preserve">
-    <value>Closed</value>
+    <value>Resolved</value>
     <comment>The status value for the user notification when a ticket is closed by an expert.</comment>
   </data>
   <data name="UnassignedUserNotificationStatus" xml:space="preserve">
@@ -320,8 +320,8 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
     <comment>The dropdown choice for "Assign to me" for the SME ticket status is being updated</comment>
   </data>
   <data name="CloseActionChoiceTitle" xml:space="preserve">
-    <value>Close</value>
-    <comment>The dropdown choice for "Close" for when the SME ticket status is being updated</comment>
+    <value>Resolved</value>
+    <comment>The dropdown choice for "Resolved" for when the SME ticket status is being updated</comment>
   </data>
   <data name="ReopenActionChoiceTitle" xml:space="preserve">
     <value>Reopen</value>
@@ -568,7 +568,7 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
     <comment>Used in date string format for adaptive card. {0} is for date and {1} is for time.</comment>
   </data>
   <data name="ErrorMessage" xml:space="preserve">
-    <value>Something went wrong. Please try again later.</value>
+    <value>An error has occurred. Please try again later.</value>
     <comment>Error message to show if there is any exception.</comment>
   </data>
   <data name="EmptyDescriptionErrorText" xml:space="preserve">
